fix header z-index

--- a/website/src/components/header/index.module.css
+++ b/website/src/components/header/index.module.css
@@ -7,6 +7,7 @@
     top: 0;
     padding: 0 16px;
     gap: 20px;
+    z-index: 100;
 }
 .headContainer {
     display: flex;
